# android-bazel-app

./: .gitignore  README.md  WORKSPACE
app/: build.gradle
app/src/main/: BUILD.bazel
gradle/wrapper/: gradle-wrapper.properties
