load("@rules_android//android:rules.bzl", "android_binary")

android_binary(
    name = "app",
    srcs = [
        "java/com/example/myapplication/MainActivity.java",
    ],
    custom_package = "com.example.myapplication",
    manifest = "AndroidManifest.xml",
    manifest_values = {
        "applicationId": "com.example.myapplication",
        "minSdkVersion": "27",
        "targetSdkVersion": "30",
        "versionCode": "1",
        "versionName": "1.0",
    },
    resource_files = glob(["res/**"]),
    deps = [
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:org_pytorch_pytorch_android",
        "@maven//:org_pytorch_pytorch_android_torchvision",
    ],
)
